# Self-saving-for-your-retirement

./: Dockerfile  README.md  compose.yaml  pyproject.toml
app/: __init__.py  domain.py  main.py  returns.py  schemas.py
app/routers/: __init__.py  performance.py  returns.py  transactions.py
test/: test_api.py  test_domain.py  test_returns.py
